<resources>
    <string name="app_name">attendanceapp</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="masuk">Masuk</string>
    <string name="re_password">Masukan Ulang Password</string>
    <string name="daftar">Daftar</string>
    <string name="daftar_akun">Daftar Akun</string>
</resources>